# QuantPyTrader

./: .coveragerc  .env.example  .gitignore  .mcp.json  BMAD_METHOD_STRATEGY_GUIDE.md  BMAD_SYSTEM_SUMMARY.md  DASHBOARD.md  Dockerfile  alembic.ini  app_basic.py  bmad_demo.py  docker-compose.yml  initialize_dashboard.py  main.py  pyproject.toml  pytest.ini  requirements-core.txt  requirements.txt  run_dashboard.py  start.sh  test_dashboard.py
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: enhanced-ux-ui-architecture.md  enhanced-ux-ui-prd.md  prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
alembic/: env.py
alembic/versions/: 20250808_2222_b8d14bdcdc23_test_migration_without_autogenerate.py
backtesting/: __init__.py
backtesting/core/: __init__.py  data_simulation.py  engine.py  events.py  filter_metrics.py  interfaces.py  performance_metrics.py  portfolio.py  position_manager.py  regime_metrics.py  transaction_costs.py  walk_forward.py
backtesting/dashboard/: __init__.py  components.py  dashboard_app.py  utils.py
backtesting/execution/: __init__.py  execution_integration.py  trade_executor.py
backtesting/export/: __init__.py  data_packager.py  export_config.py  export_manager.py  format_handlers.py  kalman_serializer.py
backtesting/results/: report_generator.py  schema.sql  storage.py
backtesting/results/templates/: report_styles.css  standard_report.html
bmad_system/: README.md  __init__.py  bmad_base_agent.py  bmad_config.yaml  bmad_coordinator.py  demo_bmad_system.py  task_analysis_report.py  task_decomposer.py  task_master_integration.py  test_bmad_system.py
bmad_system/agents/: __init__.py  data_pipeline_agent.py  kalman_filter_agent.py
config/: database.py  prometheus.yml  settings.py
core/database/: database_manager.py  kalman_models.py  kalman_service.py  market_data_service.py  migration_manager.py  models.py  query_helpers.py  serialization.py  trading_models.py  trading_service.py
core/kalman/: __init__.py  bayesian_estimator.py  ema_augmentation.py  mmcukf.py  regime_models.py  state_manager.py  ukf_base.py
data/: __init__.py  aggregator.py
data/backfill/: __init__.py  gap_detector.py  integrity_validator.py  manager.py  progress_tracker.py  worker.py
data/fetchers/: __init__.py  alpha_vantage.py  base_fetcher.py  binance.py  coinbase.py  failover_manager.py  polygon_io.py  yahoo_finance.py
data/preprocessors/: __init__.py  normalizer.py
data/streaming/: __init__.py  service.py  websocket_manager.py
docs/: dashboard_architecture.md  dashboard_implementation_summary.md
examples/: export_demo.py  position_manager_demo.py
frontend/: .env.development  .env.production  .prettierignore  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: DataTable.tsx  MetricDisplay.tsx  RegimeGauge.tsx  TradingCard.tsx  WebSocketDemo.tsx  index.ts
frontend/src/components/Layout/: AppLayout.tsx  index.ts
frontend/src/components/dashboard/: AdaptiveLayout.tsx  Dashboard.tsx  DashboardContext.tsx  WidgetContainer.tsx  index.ts  types.ts
frontend/src/components/visualization/: RegimeGauge.tsx  RegimePerformanceAttribution.tsx  RegimeTransitionHeatmap.tsx  StateEstimationPlots.tsx  index.ts
frontend/src/config/: websocket.config.ts
frontend/src/contexts/: WebSocketContext.tsx
frontend/src/hooks/: useRealTimeData.ts  useWebSocket.ts
frontend/src/pages/: Backtesting.tsx  Dashboard.tsx  Login.tsx  Portfolio.tsx  RegimeDashboard.tsx  Settings.tsx  Trading.tsx  index.ts
frontend/src/routes/: AppRouter.tsx
frontend/src/services/: marketData.service.ts  performanceMonitor.service.ts  websocket.service.ts
frontend/src/theme/: ThemeProvider.tsx  colors.ts  index.ts  spacing.ts  theme.ts  typography.ts
frontend/src/types/: theme.d.ts  websocket.ts
reports/: backtest_report_1_20250810_004855.html  backtest_report_1_20250810_004924.html
scripts/: dashboard_health_check.py  run_tests.py
tests/: test_backtest_architecture.py  test_basic_models.py  test_dashboard_components.py  test_data_generator_functionality.py  test_data_generators.py  test_data_pipeline.py  test_data_simulation.py  test_database_manager.py  test_end_to_end_workflows.py  test_execution_integration.py  test_export_system.py  test_filter_metrics.py  test_integration.py  test_kalman_models.py  test_market_data_models.py  test_migration_manager.py  test_performance_benchmarks.py  test_performance_metrics.py  test_portfolio.py  test_position_manager.py  test_query_helpers.py  test_regime_metrics.py  test_report_generator.py  test_results_storage.py  test_serialization.py  test_setup.py  test_simple_end_to_end.py  test_simple_integration.py  test_state_persistence.py  test_system_integration.py  test_trade_execution.py  test_trading_models.py  test_transaction_costs.py  test_ukf_base.py  test_utils.py  test_walk_forward.py
tests/data/: __init__.py  test_aggregator.py  test_alpha_vantage.py  test_base_fetcher.py  test_binance.py  test_coinbase.py  test_failover_manager.py  test_normalizer.py  test_polygon_io.py  test_redis_cache.py  test_websocket_manager.py  test_yahoo_finance.py
