[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantpytrader"
version = "1.0.0"
description = "Advanced quantitative trading backtesting framework with BE-EMA-MMCUKF strategy"
readme = "README.md"
authors = [{name = "QuantPyTrader Development Team", email = "dev@quantpytrader.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["quantitative", "trading", "backtesting", "kalman", "finance", "algorithmic-trading"]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.5.0",
    "scipy>=1.9.0",
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "seaborn>=0.11.0",
    "jinja2>=3.0.0",
    "python-dateutil>=2.8.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-randomly>=3.0.0",
    "coverage[toml]>=6.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]
streamlit = [
    "streamlit>=1.20.0",
    "streamlit-aggrid>=0.3.0",
]
dashboard = [
    "dash>=2.10.0",
    "dash-bootstrap-components>=1.4.0",
]
export = [
    "openpyxl>=3.0.0",
    "pyarrow>=10.0.0",
    "fastparquet>=0.8.0",
]
pdf = [
    "weasyprint>=57.0",
    "reportlab>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/quantpytrader/quantpytrader"
Documentation = "https://quantpytrader.readthedocs.io"
Repository = "https://github.com/quantpytrader/quantpytrader"
"Bug Tracker" = "https://github.com/quantpytrader/quantpytrader/issues"

[project.scripts]
quantpytrader = "backtesting.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backtesting*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
backtesting = ["*.sql", "*.yaml", "*.json", "templates/*", "static/*"]

# Black code formatting
[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# isort import sorting
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/__pycache__/*", "*/migrations/*"]

# MyPy type checking
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Enable gradually
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "streamlit.*",
    "dash.*",
    "scipy.*",
    "sklearn.*",
    "filterpy.*",
]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["backtesting"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true
parallel = true

[tool.coverage.report]
skip_covered = false
show_missing = true
sort = "Cover"
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
title = "QuantPyTrader Test Coverage Report"

# Bandit security linting
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection for tests

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--verbose",
    "--tb=short",
    "--color=yes",
    "--durations=10",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests across components", 
    "performance: Performance and benchmark tests",
    "end_to_end: Complete workflow tests",
    "slow: Tests that take significant time",
    "kalman: Kalman filter related tests",
    "storage: Database and storage tests",
    "export: Data export tests",
    "dashboard: Dashboard tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore:.*pandas.*:FutureWarning",
    "ignore:.*numpy.*:FutureWarning",
]